--- a/src/teaching_testing_level1.ipynb
+++ b/src/teaching_testing_level1.ipynb
@@ -28,11 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SEED = 12345\n",
-    "random.seed(SEED)\n",
-    "np.random.seed(SEED)\n",
-    "torch.manual_seed(SEED)\n",
-    "torch.cuda.manual_seed(SEED)"
+    "path_to_dataset = \"../datasets/base/ru/raw\"\n",
+    "\n",
+    "SEED = 12345\n"
    ]
   },
   {
@@ -177,7 +175,7 @@
    "source": [
     "if not os.path.exists(path_info_before_save):\n",
     "    os.makedirs(path_info_before_save)\n",
-    "df, df_test, n_classes, n_classes2 = get_grnti1_BERT_dataframes(\"../datasets/base/ru/raw\", \n",
+    "df, df_test, n_classes, n_classes2 = get_grnti1_BERT_dataframes(path_to_dataset, \n",
     "                                            number_of_delteted_values=number_of_delteted_values, \n",
     "                                minimal_number_of_elements_RGNTI2=minimal_number_of_elements_RGNTI2,\n",
     "                                minimal_number_of_words=minimal_number_of_words,\n",
@@ -689,6 +687,10 @@
     }
    ],
    "source": [
+    "random.seed(SEED)\n",
+    "np.random.seed(SEED)\n",
+    "torch.manual_seed(SEED)\n",
+    "torch.cuda.manual_seed(SEED)\n",
     "trainer.train()"
    ]
   },
