--- a/src/teaching_testing_level1.ipynb
+++ b/src/teaching_testing_level1.ipynb
@@ -30,7 +30,49 @@
    "source": [
     "path_to_dataset = \"../datasets/base/ru/raw\"\n",
     "\n",
-    "SEED = 12345\n"
+    "SEED = 12345"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_number_tokens = 512\n",
+    "pre_trained_model_name ='DeepPavlov/rubert-base-cased'\n",
+    "# r = 16\n",
+    "# lora_alpha = 16\n",
+    "# lora_dropout = 0.05"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_name = \"results_7_no_lora/\"\n",
+    "number_of_delteted_values = 15\n",
+    "minimal_number_of_elements_RGNTI2 = 1\n",
+    "minimal_number_of_words = 10\n",
+    "\n",
+    "path_info_before_save = base_name + f\"data_info_from_bert_level1/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epoch= 16\n",
+    "batch_size=8\n",
+    "weight_decay = 1e-6\n",
+    "warmup_steps = 10\n",
+    "fp16 = True\n",
+    "optim = \"adamw_bnb_8bit\"\n",
+    "dir_name = base_name + f\"model bert lora level 1/\""
    ]
   },
   {
@@ -64,48 +106,6 @@
     "    # Число посреди слова\n",
     "    text = re.sub('\\w*\\d\\w*', '', text)\n",
     "    return text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max_number_tokens = 512\n",
-    "pre_trained_model_name ='DeepPavlov/rubert-base-cased'\n",
-    "r = 16\n",
-    "lora_alpha = 16\n",
-    "lora_dropout = 0.05"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base_name = \"results_7_no_lora/\"\n",
-    "number_of_delteted_values = 15\n",
-    "minimal_number_of_elements_RGNTI2 = 1\n",
-    "minimal_number_of_words = 10\n",
-    "\n",
-    "path_info_before_save = base_name + f\"data_info_from_bert_level1/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "epoch= 16\n",
-    "batch_size=8\n",
-    "weight_decay = 1e-6\n",
-    "warmup_steps = 10\n",
-    "fp16 = True\n",
-    "optim = \"adamw_bnb_8bit\"\n",
-    "dir_name = base_name + f\"model bert lora level 1/\""
    ]
   },
   {
@@ -700,7 +700,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trainer.model.save_pretrained(dir_name + \"bert_peft_level1_no_lora\")"
+    "trainer.model.save_pretrained(dir_name + \"bert_level1_no_lora\")"
    ]
   },
   {
@@ -711,13 +711,6 @@
    "source": [
     "# trainer.save_model(\"bert_peft_level1_v2\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -866,7 +859,7 @@
     }
    ],
    "source": [
-    "test_predictons(sigmoid_array(prediction1_experiment), label_test, path_info_before_save, 36, \n",
+    "test_predictons(sigmoid_array(prediction1_experiment), label_test, path_info_before_save, n_classes, \n",
     "                level=1,\n",
     "                grnti_path=\"grnti_dicts_level1/\")"
    ]
