--- a/src/teaching_testing_level1.ipynb
+++ b/src/teaching_testing_level1.ipynb
@@ -861,7 +861,7 @@
    "source": [
     "test_predictons(sigmoid_array(prediction1_experiment), label_test, path_info_before_save, n_classes, \n",
     "                level=1,\n",
-    "                grnti_path=\"grnti_dicts_level1/\")"
+    "                grnti_path=\"grnti_dicts_level1_v2/\")"
    ]
   }
  ],
