change solve err

--- a/src/teaching_testing_level1.ipynb
+++ b/src/teaching_testing_level1.ipynb
@@ -41,9 +41,9 @@
    "source": [
     "max_number_tokens = 512\n",
     "pre_trained_model_name ='DeepPavlov/rubert-base-cased'\n",
-    "# r = 16\n",
-    "# lora_alpha = 16\n",
-    "# lora_dropout = 0.05"
+    "r = 16\n",
+    "lora_alpha = 16\n",
+    "lora_dropout = 0.05"
    ]
   },
   {
