--- a/src/teaching_testing_level1.ipynb
+++ b/src/teaching_testing_level1.ipynb
@@ -53,6 +53,9 @@
    "outputs": [],
    "source": [
     "base_name = \"results_7_no_lora/\"\n",
+    "\n",
+    "path_to_grnti_dicts_folder = \"grnti_dicts_level1_v2/\"\n",
+    "\n",
     "number_of_delteted_values = 15\n",
     "minimal_number_of_elements_RGNTI2 = 1\n",
     "minimal_number_of_words = 10\n",
@@ -179,7 +182,7 @@
     "                                            number_of_delteted_values=number_of_delteted_values, \n",
     "                                minimal_number_of_elements_RGNTI2=minimal_number_of_elements_RGNTI2,\n",
     "                                minimal_number_of_words=minimal_number_of_words,\n",
-    "                                dir_name=path_info_before_save, grnti_folder=\"grnti_dicts_level1_v2/\",\n",
+    "                                dir_name=path_info_before_save, grnti_folder=path_to_grnti_dicts_folder,\n",
     "                                change_codes=False)"
    ]
   },
@@ -219,33 +222,6 @@
    ],
    "source": [
     "n_classes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# target_count = pd.Series((np.concatenate(df['target'].values))).value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# target_count.values/ sum(target_count.values).sum()"
    ]
   },
   {
@@ -861,7 +837,7 @@
    "source": [
     "test_predictons(sigmoid_array(prediction1_experiment), label_test, path_info_before_save, n_classes, \n",
     "                level=1,\n",
-    "                grnti_path=\"grnti_dicts_level1_v2/\")"
+    "                grnti_path=path_to_grnti_dicts_folder)"
    ]
   }
  ],
