add path to dataset

--- a/src/teaching_testing_level1.ipynb
+++ b/src/teaching_testing_level1.ipynb
@@ -41,6 +41,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_to_dataset = \"../datasets/base/ru/raw\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -146,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +220,7 @@
    "source": [
     "if not os.path.exists(path_info_before_save):\n",
     "    os.makedirs(path_info_before_save)\n",
-    "df, df_test, n_classes, n_classes2 = get_grnti1_BERT_dataframes(\"../datasets/base/ru/raw\", \n",
+    "df, df_test, n_classes, n_classes2 = get_grnti1_BERT_dataframes(path_to_dataset, \n",
     "                                            number_of_delteted_values=number_of_delteted_values, \n",
     "                                minimal_number_of_elements_RGNTI2=minimal_number_of_elements_RGNTI2,\n",
     "                                minimal_number_of_words=minimal_number_of_words,\n",
@@ -687,7 +696,12 @@
       "{'loss': 0.0662, 'grad_norm': 0.2821773886680603, 'learning_rate': 4.9545900834560634e-05, 'epoch': 0.09}\n",
       "{'loss': 0.0638, 'grad_norm': 0.2639256417751312, 'learning_rate': 4.9528368048250226e-05, 'epoch': 0.09}\n",
       "{'loss': 0.0629, 'grad_norm': 0.12641039490699768, 'learning_rate': 4.951083526193983e-05, 'epoch': 0.1}\n",
-      "{'loss': 0.0645, 'grad_norm': 0.2292868047952652, 'learning_rate': 4.9493302475629425e-05, 'epoch': 0.1}\n"
+      "{'loss': 0.0645, 'grad_norm': 0.2292868047952652, 'learning_rate': 4.9493302475629425e-05, 'epoch': 0.1}\n",
+      "{'loss': 0.0585, 'grad_norm': 0.20763568580150604, 'learning_rate': 4.947576968931903e-05, 'epoch': 0.11}\n",
+      "{'loss': 0.0648, 'grad_norm': 0.30996376276016235, 'learning_rate': 4.945841223087173e-05, 'epoch': 0.11}\n",
+      "{'loss': 0.0676, 'grad_norm': 0.6788527369499207, 'learning_rate': 4.944087944456133e-05, 'epoch': 0.11}\n",
+      "{'loss': 0.0661, 'grad_norm': 0.22370214760303497, 'learning_rate': 4.942334665825093e-05, 'epoch': 0.12}\n",
+      "{'loss': 0.0593, 'grad_norm': 0.15588827431201935, 'learning_rate': 4.940581387194053e-05, 'epoch': 0.12}\n"
      ]
     }
    ],
