--- a/src/for_artickle.ipynb
+++ b/src/for_artickle.ipynb
@@ -16,11 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = \"..\\\\datasets\\\\base\\\\eng\\\\raw\"\n"
+    "file_path = \"..\\\\datasets\\\\base\\\\ru\\\\raw\"\n"
    ]
   },
   {
